2014-07-24  Pitchumani Sivanupandi  <pitchumani.s@atmel.com>

	Move device ata6289 from avr25 arch group to avr4.
	* devtools/gen-avr-lib-tree.sh: Move device ata6289 to avr4 arch group.
	* configure.ac: Same. 
	* doc/api/using-tools.dox: Same.

2014-05-19  Pitchumani Sivanupandi  <pitchumani.s@atmel.com>

	* include/avr/wdt.h (wdt_enable): update wdt_enable for xmega to wait
	till sync finished (as per datasheet).
	(wdt_disable): Add wdt_disable for xmega devices.

2014-05-19  Joern Rennecke <joern.rennecke@embecosm.com>

	* include/Makefile.am (avr_HEADERS): Add signal.h .
	* include/signal.h: New file.

2014-05-02  Pieter Agten  <pieter.agten@gmail.com>

	* include/avr/iom328p.h (EFUSE_DEFAULT): update default value.

2014-05-01  Joern Rennecke  <joern.rennecke@embecosm.com>

	* include/math.h (sqrtf): Don't #define, declare.
	* libm/fplib/asmdef.h (ALIAS_ENTRY): Define.
	* libm/fplib/sqrt.S (sqrtf): New ALIAS_ENTRY.

2014-05-01  Joern Rennecke  <joern.rennecke@embecosm.com>

	* configure.ac (AC_CONFIG_FILES): Add include/sys/Makefile.
	* include/Makefile.am (avr_HEADERS): Add fcntl.h, locale.h, unistd.h.
	(SUBDIRS): Add sys.
	* include/errno.h: Add definitions for error codes required to compile
	libstdc++-v3.
	* include/locale.h, include/unistd.h, include/fcntl.h: New files.
	* include/stdio.h (FILE): Change to a typedef.
	(BUFSIZ, _IONBF): Define.
	(fpos_t): Typedef.
	(fgetpos, fopen, freopen, fdopen, fseek, fsetpos, ftell): Prototype.
	(ftell, fileno, perror, remote, rename, rewind, setbuf): Likewise.
	(setvbuf, tmpfile, tmpnam): Likewise.
	* include/stdlib.h (atexit, system, getenv): Prototype.
	* include/string.h (strcoll, strerror, strxfrm): Prototype.
	* include/sys: New directory.
	* include/time.h (_CLOCKS_PER_SEC_): Declare.
	(CLOCKS_PER_SEC): Define.
	(clock): Declare.
	* libc/stdlib/Files.am (stdlib_a_c_sources): Add atexit.c, getenv.c,
	system.c
	* libc/stdlib/atexit.c: New file.
	* libc/stdlib/getenv.c, * libc/stdlib/system.c: New stub files.
