@@ -23,6 +23,7 @@
   [#40003] Integer type promotion leads to inefficent code in wdt.h
   [#40206] incorrect SP init in startup code for xmegas
   [#40567] Invalid names in iotn13a.h (EEPE/EEMPE/BODS/BODSE)
+  [#40569] sleep_bod_disable does not work in attiny13a
   [#40595] iotn2313a.h: wrong fuses definitions for High Fuse Byte
   [#41006] iom328p.h: wrong fuse defaults
   [#41519] wrong SPM_PAGESIZE definition in iotn[48]8.h
